<resources>
    <string name="app_name">成人考试报名</string>
    <string name="label_username">用户名：</string>
    <string name="hint_username">请输入用户名</string>
    <string name="label_password">密&#160;&#160;&#160;&#160;码：</string>
    <string name="hint_password">请输入密码</string>
    <string name="button_login">登&#160;&#160;录</string>
    <string name="button_exit">退&#160;&#160;出</string>
    <string name="login_title">用&#160;户&#160;登&#160;录</string>
    <string name="home_return">◁</string>
    <string name="welcome">welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_register">注&#160;&#160;册</string>
    <string name="register">Register</string>
    <string name="finish">Finish</string>
    <string name="new_username">New Username</string>
    <string name="exam_list_title">成人自学考试报名入口</string>
    <string name="image">image</string>
    <string name="reg_info_type">报 名 信 息 填 报</string>
</resources>
