<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/christmas"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title"
        android:layout_marginBottom="@dimen/title_down"
        android:gravity="center_horizontal"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        android:text="@string/login_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_username"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/form_key" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/hint_username"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/form_key" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/hint_password"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:ems="10"
            android:maxLength="6"
            android:hint="@string/hint_password"
            android:inputType="numberPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/form_margin_top"
        android:orientation="horizontal"
        tools:ignore="ButtonStyle">

        <Button
            android:id="@+id/login"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:background="@drawable/bg_shape_green"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_button_font"
             />

        <Button
            android:id="@+id/register"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:background="@drawable/bg_shape_red"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_button_font"
            android:layout_marginHorizontal="18sp"
            />

        <Button
            android:id="@+id/exit"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="wrap_content"
            android:text="@string/button_exit"
            android:background="@drawable/bg_shape_blue"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_button_font" />
    </LinearLayout>
</LinearLayout>