<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/register_background"
    android:gravity="center"
    android:paddingHorizontal="@dimen/padding_horizontal"
    tools:context=".AccountRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_username"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/form_key" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/hint_username"
            android:textSize="@dimen/input_font_size"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/form_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/form_key" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/hint_password"
            android:textSize="@dimen/input_font_size"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:ems="10"
            android:maxLength="6"
            android:hint="@string/hint_password"
            android:inputType="number"
            tools:ignore="TextFields" />
    </LinearLayout>

    <Button
        android:id="@+id/register_register"
        android:layout_width="@dimen/register_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/bg_shape_black"
        android:textSize="18sp"
        android:onClick="register"
        android:text="@string/register" />


</LinearLayout>